--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <center><h1>This is h1 tag.</h1></center>
+    <form id="myForm">
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname"><br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
