--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <input type="text" id="fname" name="fname"><br>
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname"><br>
-        <input type="submit" value="Submit">
+        <!-- <input type="submit" value="Submit"> -->
+        <button type="button" value="submit">Submit</button>
     </form>
 </body>
 </html>
